# DeepSeekAIAssistant

./: .gitignore  LOCAL_AI_SETUP.md  README.md  RUST_SETUP.md  check_ndk_cmake.bat  gradle.properties  settings.gradle.kts  setup_llama.bat
app/: build.gradle.kts
app/src/androidTest/java/com/example/deepseekaiassistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  agent_core.h  agent_jni.c  asm_core.S  asm_core.h  benchmark.c  binary_optim.h  branchless_optim.c  hp_core.c  kernel_optimize.c  kernel_syscall.S  llama_android.cpp  precision_timer.c  screen_memory.c  simd_image.c  simd_image_adv.c  touch_inject.c  ultra_optim.S  vectorizer.c
app/src/main/java/com/example/deepseekaiassistant/: AIProvider.kt  ChatAdapter.kt  ChatMessage.kt  DeepSeekApiService.kt  DeepSeekApp.kt  DeepSeekConfig.kt  DeepSeekRequest.kt  DeepSeekResponse.kt  DiagnosticActivity.kt  DiagnosticManager.kt  MainActivity.kt  RetrofitClient.kt  SelfCheckManager.kt  SettingsActivity.kt  SplashActivity.kt
app/src/main/java/com/example/deepseekaiassistant/agent/: ActionExecutor.kt  AgentCore.kt  GameAIAgent.kt  GameMemoryReader.kt  NativeAgentCore.kt  SceneStrategy.kt  ScreenVision.kt
app/src/main/java/com/example/deepseekaiassistant/capability/: CommandParser.kt  DeviceCapabilityManager.kt
app/src/main/java/com/example/deepseekaiassistant/kernel/: KernelOptimize.kt
app/src/main/java/com/example/deepseekaiassistant/local/: LlamaCpp.kt  LocalAIManager.kt
app/src/main/java/com/example/deepseekaiassistant/math/: LatexParser.kt  MathEngine.kt  MathModels.kt  MathProcessManager.kt
app/src/main/java/com/example/deepseekaiassistant/receiver/: BootReceiver.kt
app/src/main/java/com/example/deepseekaiassistant/root/: AIControlCommand.kt  AIRootController.kt  RootManager.kt
app/src/main/java/com/example/deepseekaiassistant/service/: AIAccessibilityService.kt  NotificationService.kt
app/src/main/java/com/example/deepseekaiassistant/termux/: TermuxActivity.kt  TermuxIntegration.kt
app/src/main/java/com/example/deepseekaiassistant/tools/: FileManager.kt  SceneTools.kt  SystemExplorer.kt  VectorizeActivity.kt  VectorizerManager.kt
app/src/main/java/com/example/deepseekaiassistant/ui/: BrowserFragment.kt  ChatFragment.kt  MainPagerAdapter.kt  MathFragment.kt  SceneFragment.kt  SystemExplorerFragment.kt
app/src/main/java/com/example/deepseekaiassistant/validator/: ComponentValidator.kt
app/src/main/res/anim/: rotate_rgb.xml
app/src/main/res/drawable/: bg_bottom_nav_genshin.xml  bg_bubble_ai.xml  bg_bubble_user.xml  bg_button_genshin.xml  bg_card_genshin.xml  bg_icon_button.xml  bg_input_field.xml  bg_input_genshin.xml  bg_rgb_button.xml  bg_rgb_card.xml  bg_rgb_glow.xml  bg_send_button.xml  bg_tab_count.xml  btn_accent.xml  btn_success.xml  ic_arrow_back.xml  ic_attach.xml  ic_bookmark.xml  ic_browser.xml  ic_calculate.xml  ic_chart.xml  ic_chat.xml  ic_functions.xml  ic_home.xml  ic_image.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_library.xml  ic_lock.xml  ic_menu.xml  ic_mic.xml  ic_save.xml  ic_scene.xml  ic_system.xml  ic_termux.xml  ic_video.xml  spinner_bg.xml
app/src/main/res/layout/: activity_diagnostic.xml  activity_main.xml  activity_splash.xml  activity_termux.xml  activity_vectorize.xml  dialog_download_progress.xml  fragment_browser.xml  fragment_chat.xml  fragment_math.xml  fragment_scene.xml  fragment_system_explorer.xml  item_chat_ai.xml  item_chat_user.xml  item_termux_status.xml  termux_page_api.xml  termux_page_scripts.xml  termux_page_status.xml  termux_page_terminal.xml  termux_page_x11.xml
app/src/main/res/menu/: bottom_navigation_menu.xml  menu_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  preferences.xml
app/src/test/java/com/example/deepseekaiassistant/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust_core/: Cargo.toml  build_android.ps1  build_android.sh
rust_core/.cargo/: config.toml
rust_core/src/: image_engine.rs  jni_bridge.rs  lib.rs  memory_engine.rs  strategy_engine.rs
