[package]
name = "agent_core"
version = "1.0.0"
edition = "2021"
authors = ["DeepSeek AI Assistant"]
description = "High-performance Rust core for AI Agent execution system"

[lib]
name = "agent_core"
crate-type = ["cdylib"]

[dependencies]
# JNI binding
jni = { version = "0.21", features = ["invocation"] }

# Image processing
image = "0.24"
imageproc = "0.23"

# Fast hash map
rustc-hash = "1.1"

# Parallel processing
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
android_logger = "0.13"

# Memory-mapped files
memmap2 = "0.9"

# Pattern matching
regex = "1.10"

# Priority queue for A* algorithm
priority-queue = "1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
